<resources>
    <string name="app_name">First App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="newnumber">New number!</string>
    <string name="higher">Higher!</string>
    <string name="lower">Lower!</string>
    <string name="number">Random Number</string>
    <string name="makeyourguess">Make your guess!</string>
    <string name="makeguess">Guess!</string>
</resources>
